#1701: Added GeoCodeTimeZone object and queries